@startuml CD
skinparam classAttributeIconSize 0
top to bottom direction

class SendEmailTask {
	+ sendMessages(Map<Freelancer, String> fre_msg)
        + run()
	+ getMessages()
}


class EmailAPI {
	+ payTo(String freelancerId,String taskId, Interger delay )
}


class Organization {
        - String name
        + getTaskList()
}

class ListTransaction {
        + getTransaction(ID)
}

class Transaction {
        + getExecutionDetails()
}


class TaskExecutionDetails {
        - Date endDate
        - Integer delayInDays
        - String DescriptionQualityOfWork
        + sendEmailFreelancer()
}

class Freelancer {
        - String id
        - String name
        - String levelOfExpertise
        - String email
        - String NIF
        - String bankAccountIBAN
        - String address
        - String country
}

App                          "1" --> "1"      RegistOrganization        : has
RegistOrganization           "1" --> "*"      Organization              : has
Organization                 "1" --> "1"      ListTransaction           : has
ListTransaction              "1" --> "*"      Transaction               : has
Transaction                  "1" --> "1"      TaskExecutionDetails      : has
TaskExecutionDetails         "*" --> "1"      Freelancer                : knows
App                          "1" --> "1"      EmailAPI                  : has
SendEmailTask                    ..>          ListTransaction
SendEmailTask                    ..>          Transaction
SendEmailTask                    ..>          App
SendEmailTask                    ..>          Organization
SendEmailTask                    ..>          TaskExecutionDetails
SendEmailTask                    ..>          RegistOrganization
SendEmailTask                    ..>          EmailAPI
SendEmailTask                    ..>          Freelancer

@enduml